# ChangeLog for media-libs/gegl
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-libs/gegl/ChangeLog,v 1.26 2009/07/07 00:20:26 jer Exp $

  07 Jul 2009; Jeroen Roovers <jer@gentoo.org> gegl-0.0.22.ebuild:
  Stable for HPPA (bug #258344).

  26 May 2009; Hanno Boeck <hanno@gentoo.org> gegl-0.0.22.ebuild,
  +files/replace-imgconvert-by-swsscale.patch:
  Don't use deprecated img_convert function, patch from Pardus.

  06 Apr 2009; Brent Baude <ranger@gentoo.org> gegl-0.0.22.ebuild:
  Marking gegl-0.0.22 ppc for bug 258344

  31 Mar 2009; Raúl Porcel <armin76@gentoo.org> gegl-0.0.22.ebuild:
  ia64/sparc stable wrt #258344

  22 Mar 2009; Tobias Klausmann <klausman@gentoo.org> gegl-0.0.22.ebuild:
  Stable on alpha, bug #258344

  20 Mar 2009; Markus Meier <maekke@gentoo.org> gegl-0.0.22.ebuild:
  amd64/x86 stable, bug #258344

  31 Jan 2009; Matti Bickel <mabi@gentoo.org> gegl-0.0.22.ebuild:
  added ~ppc for bug #240433

  15 Jan 2009; Hanno Boeck <hanno@gentoo.org>
  +files/gegl-0.0.22-locale_h.diff, gegl-0.0.22.ebuild:
  Add missing include, fixes #254619.

  10 Jan 2009; Michael Sterrett <mr_bones_@gentoo.org> gegl-0.0.22.ebuild:
  inherit goes near the top

  10 Jan 2009; Patrick Lauer <patrick@gentoo.org> gegl-0.0.22.ebuild:
  Adding eutils inherit, fixes bug #254485

  10 Jan 2009; Hanno Boeck <hanno@gentoo.org> gegl-0.0.22.ebuild:
  Remove sandbox workaround, fixed upstream, see
  http://bugzilla.gnome.org/show_bug.cgi?id=529668.

*gegl-0.0.22 (10 Jan 2009)

  10 Jan 2009; Hanno Boeck <hanno@gentoo.org> +gegl-0.0.22.ebuild:
  Version bump.

  28 Dec 2008; Raúl Porcel <armin76@gentoo.org> gegl-0.0.20.ebuild:
  Add ~ia64 wrt #240433

  25 Dec 2008; Friedrich Oslage <bluebird@gentoo.org> gegl-0.0.20.ebuild:
  Add ~sparc keyword, bug #240433

  11 Dec 2008; Tobias Klausmann <klausman@gentoo.org> gegl-0.0.20.ebuild:
  Keyworded on alpha, bug #240433
