@@ -1,6 +1,12 @@
 # ChangeLog for media-libs/gegl
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-libs/gegl/ChangeLog,v 1.26 2009/07/07 00:20:26 jer Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-libs/gegl/ChangeLog,v 1.27 2009/09/01 08:52:21 patrick Exp $
+
+*gegl-0.1.0 (01 Sep 2009)
+
+  01 Sep 2009; Patrick Lauer <patrick@gentoo.org> +gegl-0.1.0.ebuild:
+  Bump to 0.1.0, fixes half of #281264. Thanks to Tim Harder for testing and
+  ebuild patches.
 
   07 Jul 2009; Jeroen Roovers <jer@gentoo.org> gegl-0.0.22.ebuild:
   Stable for HPPA (bug #258344).
